envelopes.

- changed parameter for specifying convergence bandwidth
tolerance from percent (0 to 100) to absolute (0 to 1)
to be more intuitive and consistent with the rest of
Loris (which doesn't use percent anywhere). Affects
C++, Python, and C interfaces. For now, a value greater
than one is scaled down by 1/100 with a notification of
the change.

-------------------------------------------------------
changes since 1.4 release:

- enabled fundamental estimation by default in Analyzer

- added mixed phase derivative estimator option for 
bandwidth association. Added corresponding Analyzer member
functions for selecting a bandwidth association option:
storeResidueBandwidth (bandwidth association algorithm 
in previous versions of Loris), storeConvergenceBandwidth
(mixed derivative), or storeNoBandwidth (no bandwidth 
association). 

- fixed typos in AiffFile.h that prevented compiling on 
some systems.

- added option in Channelizer to use amplitude weighting
in the computation of the apropriate channel for a Partial.

- added Channelizer members for computing channel center
frequencies and channel numbers corresponding to a
specified frequency.

- improved accuracy of stretched harmonic channelization.

- improved fundamental estimation algorithm to use estimator
confidence level to determine the validity of f0 estimates
(used in FrequencyReference and Analyzer).

-------------------------------------------------------
changes since 1.3 release:

- phase/frequency correction incorporated into Analyzer
and Morpher so that both now generate phase-correct
Partials.

- Channelizer made more reliable by using a non-weighted
frequency average. Also added capability to channelize
stretched harmonics, as in piano tones, by computing a
strecthing factor and using it to align the frequency 
channels on non-integer multiples of the fundamental 
frequency.

- made Resampler preserve phases by making small frequency 