@@ -33,7 +33,7 @@ dnl each release!!!!!
 LORIS_MAJOR_VERSION=1
 LORIS_MINOR_VERSION=5
 LORIS_SUBMINOR_VERSION=1
-LORIS_PRERELEASE_STR="alpha"
+LORIS_PRERELEASE_STR="beta1"
 LORIS_VERSION_STR="$PACKAGE_STRING$LORIS_PRERELEASE_STR"
 AC_SUBST(LORIS_MAJOR_VERSION)
 AC_SUBST(LORIS_MINOR_VERSION)
