@@ -38,6 +38,7 @@
 #include "Collator.h"
 #include "Breakpoint.h"
 #include "BreakpointUtils.h"
+#include "Distiller.h"	//	only for its default fade time and silent time
 #include "LorisExceptions.h"
 #include "Partial.h"
 #include "PartialList.h"
@@ -52,28 +53,39 @@
 namespace Loris {
 
 // ---------------------------------------------------------------------------
+//	global defaults and constants
+// ---------------------------------------------------------------------------
+//! Default time (in seconds) over which Partials joined by
+//! distillation fade to and from zero amplitude.
+const double Collator::DefaultFadeTime = Distiller::DefaultFadeTime;    // 5 ms
+
+//! Default minimum duration (in seconds) of the silent 
+//! (zero-amplitude) gap between two Partials joined by distillation.
+const double Collator::DefaultSilentTime = Distiller::DefaultSilentTime;  // 1 ms
+
+
+// ---------------------------------------------------------------------------
 //	Collator constructor
 // ---------------------------------------------------------------------------
-//!	Construct a new Collator using the specified fade and gap times
-//!	between Partials. When two Partials are joined, the collated Partial
-//!	fades out at the end of the earlier Partial and back in again
-//!	at the onset of the later one. The fade time is the time over
-//!	which these fades occur. By default, use a 1 ms fade time.
+//! Construct a new Collator using the specified fade and gap times
+//! between Partials. When two Partials are joined, the collated Partial
+//! fades out at the end of the earlier Partial and back in again
+//! at the onset of the later one. The fade time is the time over
+//! which these fades occur. By default, use a 5 ms fade time.
 //!	The gap time is the additional time over which a Partial faded
 //!	out must remain at zero amplitude before it can fade back in.
-//!	By default, use a gap time of one tenth of a millisecond, to 
+//!	By default, use a gap time of one millisecond, to 
 //!	prevent a pair of arbitrarily close null Breakpoints being
-//!	inserted.
+//!	inserted. (Defaults are copied from the Distiller.)
 //!
 //!   \param   partialFadeTime is the time (in seconds) over
-//!            which Partials joined by collating fade to
-//!            and from zero amplitude. Default is 0.001 (one
+//!            which Partials joined by distillation fade to
+//!            and from zero amplitude. Default is 0.005 (one
 //!            millisecond).
 //!   \param   partialSilentTime is the minimum duration (in seconds) 
 //!            of the silent (zero-amplitude) gap between two 
-//!            Partials joined by collating. (Default is
-//!            0.0001 (one tenth of a millisecond).
-//
+//!            Partials joined by distillation. (Default is
+//!            0.001 (one millisecond).
 Collator::Collator( double partialFadeTime, double partialSilentTime ) :
 	_fadeTime( partialFadeTime ),
 	_gapTime( partialSilentTime )
