@@ -70,21 +70,21 @@ const double Distiller::DefaultSilentTime = 0.001;  // 1 ms
 //!	are distilled into a single Partial, the distilled Partial
 //!	fades out at the end of the earlier Partial and back in again
 //!	at the onset of the later one. The fade time is the time over
-//!	which these fades occur. By default, use a 1 ms fade time.
+//!	which these fades occur. By default, use a 5 ms fade time.
 //!	The gap time is the additional time over which a Partial faded
 //!	out must remain at zero amplitude before it can fade back in.
-//!	By default, use a gap time of one tenth of a millisecond, to 
+//!	By default, use a gap time of one millisecond, to 
 //!	prevent a pair of arbitrarily close null Breakpoints being
 //!	inserted.
 //!
 //!   \param   partialFadeTime is the time (in seconds) over
 //!            which Partials joined by distillation fade to
-//!            and from zero amplitude. Default is 0.001 (one
+//!            and from zero amplitude. Default is 0.005 (one
 //!            millisecond).
 //!   \param   partialSilentTime is the minimum duration (in seconds) 
 //!            of the silent (zero-amplitude) gap between two 
 //!            Partials joined by distillation. (Default is
-//!            0.0001 (one tenth of a millisecond).
+//!            0.001 (one millisecond).
 //
 Distiller::Distiller( double partialFadeTime, double partialSilentTime ) :
 	_fadeTime( partialFadeTime ),
